$Id: ChangeLog,v 1.363 2006/11/08 08:54:45 haraldkipp Exp $


2006-11-08  Harald Kipp  <harald.kipp@egnite.de>

	* Bugfix, kindly provided by Steve Venroy. Already released request 
	structure was passed to NutHttpSendError().


2006-10-21  Christian Welzel <christian.welzel@welzel-online.ch>
	* tools/nutconf/nutconf.cpp, tools/nutconf/nutconfdoc.cpp,
	tools/nutconf/repoptdlg.cpp, tools/nutconf/repoptdlg.h,
	tools/nutconf/settings.cpp, tools/nutconf/settings.h,
	tools/nutconf/settingsdlg.cpp: Added support for multiple
	configurations / settings
	

2006-10-17  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, os/version.c: Branch created for version 4.2.

	* arch/arm/dev/at91_emac.c: Number of loops waiting for links
	increased to 10000 and NIC resets reduced. This will help to
	link to auto MDIX via direct cable. Thanks to Dany Nativel for
	all the testing.

	* net/ipout.c: Failed ARP requests are no longer classified
	as fatal transmission errors.


2006-10-07 Henrik Maier  <henrik@proconx.com>

        * arch/avr/os/nutinit.c: include of sys/heap.h added.

        * include/sys/heap.h: Added an include statement for cfg/memory.h
        so the macro NUTMEM_STACKHEAP is found when compiling for the
        AT90CAN128.


2006-10-07  Harald Kipp  <harald.kipp@egnite.de>

	* Fixed problems with Doxygen tags in a large number of files.

	* dev/ds1307rtc.c: Corrected range check in DS1307RamRead().
	Thanks to Helmut Holbach.

	* conf/arch/avr.nut, conf/repository.nut, arch/avr/dev/hd44780.c:
	Many thanks to Thiago Correa for adding LCD port configuration.

	* arch/arm/ldscripts/at91_rom.ld: Matthias Wilde's enhancements
	for C++ support should allow to run C++ programs in ROM/FLASH.

	* arch/arm/dev/at91_emac.c, conf/arch/arm.nut: PHY address and
	power down bit are now configurable.

	* fs/phatdir.c, fs/phatfs.c, fs/phatvol.c, include/fs/phatdir.h,
	include/fs/phatfs.h, include/fs/phatvol.h: Not optimal, but