@@ -1,5 +1,8 @@
-$Id: ChangeLog,v 1.363 2006/11/08 08:54:45 haraldkipp Exp $
+$Id: ChangeLog,v 1.364 2006/12/20 15:14:40 freckle Exp $
 
+2006-12-20  Matthias Ringwald <mringwal@inf.ethz.ch>
+    * arch/avr/dev/ostimer.c: corrected millisecond to nut ticks
+    calcuation. Same bug as fixed at 2006-09-05.
 
 2006-11-08  Harald Kipp  <harald.kipp@egnite.de>
 
